--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1479,7 +1479,7 @@
 			position: relative;
 			width: 40rem;
 			max-width: 100%;
-			background-color: rgba(27, 31, 34, 0.85);
+			background-color: rgba(163,163,163, 0.65);
 			border-radius: 4px;
 			opacity: 0;
 		}
@@ -1592,3 +1592,9 @@
 		body.is-loading #footer {
 			opacity: 0;
 		}
+        
+        .copyleft {
+          font-size: 0.8rem;
+          display:inline-block;
+          transform: rotate(180deg);
+        }
