--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9,8 +9,13 @@
          url('leaguespartan-bold.svg#league_spartanbold') format('svg');
     font-weight: bold;
     font-style: normal;
+    font-family : 'Raleway Thin';
+    src: url('raleway_thin-webfont.eot');
+    src: url('raleway_thin-webfont.ttf'),
+         url('raleway_thin-webfont.woff'),
+         url('raleway_thin-webfont.svg');
 
-}
+    }
 
 /*
 	Dimension by HTML5 UP
@@ -130,11 +135,19 @@
 
 		}
 
-	body, input, select, textarea {
+	body {
 		color: #ffffff;
 		font-family: 'League Spartan';
 		font-weight: 300;
 		font-size: 1rem;
+		line-height: 1.65;
+	}
+    
+	p, li, input, select, textarea {
+		color: #ffffff;
+		font-family: 'Raleway Thin';
+		font-weight: 300;
+		font-size: 1.1rem;
 		line-height: 1.65;
 	}
 
