--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9,13 +9,16 @@
          url('leaguespartan-bold.svg#league_spartanbold') format('svg');
     font-weight: bold;
     font-style: normal;
-    font-family : 'Raleway Thin';
-    src: url('raleway_thin-webfont.eot');
-    src: url('raleway_thin-webfont.ttf'),
-         url('raleway_thin-webfont.woff'),
-         url('raleway_thin-webfont.svg');
-
     }
+    @font-face {
+        font-family : 'Raleway Thin';
+        src: url('raleway_thin-webfont.eot');
+        src: url('raleway_thin-webfont.ttf'),
+             url('raleway_thin-webfont.woff'),
+             url('raleway_thin-webfont.svg');
+        font-weight: thin;
+        font-style: normal;
+        }
 
 /*
 	Dimension by HTML5 UP
