unify font on front page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -41,7 +41,11 @@
 		display: block;
 	}
 
-	body {
+	.frontlist {
+	    font-family: 'League Spartan' !important;
+	}
+    
+    body {
 		line-height: 1;
 	}
 
