--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -44,7 +44,7 @@
 	.frontlist {
 	    font-family: 'League Spartan' !important;
 	}
-    
+
     body {
 		line-height: 1;
 	}
@@ -149,7 +149,7 @@
 		font-size: 1rem;
 		line-height: 1.65;
 	}
-    
+
 	p, li, input, select, textarea {
 		color: #ffffff;
 		font-family: 'Raleway Thin';
@@ -759,6 +759,7 @@
 			ul.icons li {
 				display: inline-block;
 				padding: 0 0.75em 0 0;
+        font-size: 1.75rem
 			}
 
 				ul.icons li:last-child {
@@ -769,10 +770,10 @@
 					border-radius: 100%;
 					box-shadow: inset 0 0 0 1px #ffffff;
 					display: inline-block;
-					height: 2.25rem;
-					line-height: 2.25rem;
+					height: 3.25rem;
+					line-height: 3.25rem;
 					text-align: center;
-					width: 2.25rem;
+					width: 3.25rem;
 				}
 
 					ul.icons li a:hover {
@@ -1623,7 +1624,7 @@
 		body.is-loading #footer {
 			opacity: 0;
 		}
-        
+
         .copyleft {
           font-size: 0.7rem;
           display:inline-block;
