--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,5 @@
 @import url(font-awesome.min.css);
+@import url('https://fonts.googleapis.com/css?family=Raleway');
 @font-face {
     font-family: 'League Spartan';
     src: url('leaguespartan-bold.eot');
@@ -152,7 +153,7 @@
 
 	p, li, input, select, textarea {
 		color: #ffffff;
-		font-family: 'Raleway Thin';
+		font-family: 'Raleway';
 		font-weight: 300;
 		font-size: 1.1rem;
 		line-height: 1.65;
